[tool.poetry]
name = "package-release-tester"
version = "0.1.3"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "package_release_tester"}]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
